--- a/index.html
+++ b/index.html
@@ -28,22 +28,8 @@
         <button class="restart-btn" onclick="onRestartGame()">Click to Restart</button>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/util.js"></script>
 </body>
-<!-- <body onload="onInIt()">
 
-    <h1>💣 SWEEPER</h1>
-    <DIv>
-
-    </DIv>
-
-    <H3></H3>
-
-    <table>
-        <tbody class="board"></tbody>
-    </table> -->
-
-    <!-- <script src="js/game.js"></script> -->
-
-<!-- </body> -->
 
 </html>
