--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
     <h1>💣 SWEEPER</h1>
     <div class="timer-container">
         <span class="timer">0</span>
+
+    </div class="modal">
+    <h3 class="msg"></h3>
+    <button class="restart-btn" onclick="onRestartGame()">Play Again</button>
     </div>
     <table border="1">
         <tbody class="board"></tbody>
     </table>
-    <div class="level-btns-container">
-        <button class="level-btn" onclick="onChangeLevel(4)">Eazy (16)</button>
-        <button class="level-btn" onclick="onChangeLevel(5)">Hard (25)</button>
-        <button class="level-btn" onclick="onChangeLevel(6)">Extreme (36)</button>
+    <div>
+        <button class="level-btn" onclick="onChangeLevel(4)">Easy 🐣 </button>
+        <button class="level-btn" onclick="onChangeLevel(5)">Moderate 🐤 </button>
+        <button class="level-btn" onclick="onChangeLevel(6)">Hard 🐔 </button>
     </div>
 
     <div class="victory-container hide">
         <h1>You Won!</h1>
-        <button class="restart-btn" onclick="onRestartGame()">Click to Restart</button>
     </div>
+    <h2> Sagi </h2>>
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
 </body>
