--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
 <body onload="onInIt()">
     <h1>💣 SWEEPER</h1>
     <div class="timer-container">
-        <span class="timer">0</span>
+        <span class="timer">0.0</span>
+    </div>
+    <div class="lives">
+        <button class="smiley-btn" onclick="smile()"></button>
 
-    </div class="modal">
-    <h3 class="msg"></h3>
-    <button class="restart-btn" onclick="onRestartGame()">Play Again</button>
+    </div>
+  
     </div>
     <table border="1">
         <tbody class="board"></tbody>
     </table>
-    <div>
+    <div class="level-button-container">
         <button class="level-btn" onclick="onChangeLevel(4)">Easy 🐣 </button>
-        <button class="level-btn" onclick="onChangeLevel(5)">Moderate 🐤 </button>
-        <button class="level-btn" onclick="onChangeLevel(6)">Hard 🐔 </button>
+        <button class="level-btn" onclick="onChangeLevel(6)">Moderate 🐤 </button>
+        <button class="level-btn" onclick="onChangeLevel(8)">Hard 🐔 </button>
     </div>
 
     <div class="victory-container hide">
         <h1>You Won!</h1>
+        <button class="restart-btn" onclick="onRestartGame()">Play Again</button>
+    </div>
+    <div class="defeat-container hide">
+        <h1>You lost!</h1>
+        <button class="restart-btn" onclick="onRestartGame()">Play Again</button>
     </div>
     <h2> Sagi </h2>>
     <script src="js/main.js"></script>
